--- a/day-7-completeNikeStore/package.json
+++ b/day-7-completeNikeStore/package.json
@@ -10,10 +10,12 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "next": "15.0.4",
@@ -24,7 +26,8 @@
     "react-icons": "^5.4.0",
     "sanity": "^3.70.0",
     "styled-components": "^6.1.14",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
